welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:20: error: not found: value hateur
           	{numeroterSol() ; setPos(hateur-i+j,hauteur-1-j)} }
                                         ^